--- a/src/components/landing.css
+++ b/src/components/landing.css
@@ -1,5 +1,38 @@
-.top-bar{
+.header {
+  /* background: url('../assets/banner.png'); */
+  color: white;
+  font-family: "Avenir next";
+  /* width: 100%; */
+  /* height: 100%; */
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top left, center center;
+
+}
+
+.top-bar {
   display: flex;
   justify-content: space-between;
   margin: 20px 20px 0px 20px;
+}
+
+.welcome {
+  display: flex;
+  justify-content: center;
+  height: inherit;
+  margin-top: -20px;
+}
+.welcome > h1 {
+  align-self: center;
+}
+
+.2nd-section {
+  display: flex;
+  flex-direction: row;
+}
+
+.main_img {
+  width: 100%;
+  height: 100%;
 }
