--- a/src/components/landing.css
+++ b/src/components/landing.css
@@ -1,20 +1,21 @@
-.header {
-  /* background: url('../assets/banner.png'); */
-  color: white;
+body {
   font-family: "Avenir next";
-  /* width: 100%; */
-  /* height: 100%; */
+}
+
+
+.header {
+  color: white;
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top left, center center;
-
+  margin-bottom: -3px;
 }
 
 .top-bar {
   display: flex;
   justify-content: space-between;
-  margin: 20px 20px 0px 20px;
+  margin: 20px 40px 0px 40px;
 }
 
 .welcome {
@@ -25,14 +26,112 @@
 }
 .welcome > h1 {
   align-self: center;
-}
-
-.2nd-section {
-  display: flex;
-  flex-direction: row;
+  font-size: 33px;
+  font-weight: 450;
 }
 
 .main_img {
   width: 100%;
   height: 100%;
+}
+
+.header-content {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.second-section {
+  display: flex;
+  flex-direction: row;
+  height: 200px;
+}
+
+.s2-left {
+  width: 50%;
+  font-size: 26px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
+
+div.s2-left > h2 {
+  align-self: center;
+  text-transform: uppercase;
+  color: #e43c4b;
+}
+
+.s2-right {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 2;
+  color: #413d3d;
+}
+div.s2-right > ul {
+  font-size: 12px;
+  font-weight: 400;
+  color: #1e3656;
+}
+div.s2-right > h3 {
+  font-weight: 500;
+  font-size: 12px;
+  color: #272727;
+}
+
+
+div.third-section {
+  background-color: #f1faef;
+
+}
+
+.third-section {
+  display: flex;
+  flex-direction: row;
+  height: 400px;
+}
+
+.s3-left {
+  width: 50%;
+  font-size: 26px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
+.s3-right {
+  width: 50%;
+  font-size: 26px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
+
+.s3-left-cont {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+}
+
+.s3-img-cube {
+  width: 150px;
+  height: 150px;
+  background: grey;
+  background: url('../assets/1.png');
+  background-size: cover;
+  box-shadow: 0px 0px 10px 10px #0000000a;
+}
+
+.s3 {
+  
+}
+
+.s3-text > h4 {
+
+}
+.s3-text > p {
+
 }
