--- a/src/components/landing.css
+++ b/src/components/landing.css
@@ -93,6 +93,7 @@ div.third-section {
   display: flex;
   flex-direction: row;
   height: 400px;
+  border-top: 2px solid #f1f1f1;
 }
 
 .s3-left {
@@ -125,13 +126,47 @@ div.third-section {
   box-shadow: 0px 0px 10px 10px #0000000a;
 }
 
-.s3 {
-  
+.s3-text {
+  height: 150px;
+  width: 220px;
+  margin-left: 30px;
 }
 
 .s3-text > h4 {
-
+  font-size: 14px;
+  line-height: 1.2;
+  margin-bottom: 10px;
+  color: #525252;
 }
 .s3-text > p {
+  font-size: 11px;
+  line-height: 1.2;
+  color: #8396af;
+  font-weight: 500;
+}
 
+div.s3-right > div.s3-left-cont > div.s3-img-cube {
+  width: 150px;
+  height: 150px;
+  background: grey;
+  background: url('../assets/2.png');
+  background-size: cover;
+  box-shadow: 0px 0px 10px 10px #0000000a;
+}
+
+.fourth-section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.fourth-section > h3 {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.fourth-section > ul {
+  display: flex;
+  justify-content: center;
 }
