--- a/src/components/landing.css
+++ b/src/components/landing.css
@@ -156,17 +156,41 @@ div.s3-right > div.s3-left-cont > div.s3-img-cube {
 
 .fourth-section {
   display: flex;
-  justify-content: center;
+  border-bottom: 2px solid #f1f1f1;
   flex-direction: column;
   text-align: center;
+  height: 350px;
 }
 
 .fourth-section > h3 {
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 600;
+  margin: 40px 0px 40px 0px;
 }
 
 .fourth-section > ul {
   display: flex;
   justify-content: center;
+}
+
+.fourth-section > ul > li:nth-child(1n+1){
+  margin-left: 20px;
+}
+
+div.li-img > img {
+  width: 150px;
+  height: 150px;
+  box-shadow: 0px 1px 10px 4px #0000000a;
+}
+
+div.txt {
+  margin-top: 10px;
+}
+div.txt {
+  font-size: 13px;
+  font-weight: 500;
+}
+div.txt > p {
+  font-size: 11px;
+  font-weight: 300;
 }
