--- a/src/components/login.css
+++ b/src/components/login.css
@@ -18,4 +18,92 @@
 .login-form {
   display: flex;
   justify-content: center;
+  height: 100%;
+  margin-top: -30px;
+}
+
+.log-block {
+  align-self: center;
+  width: 200px;
+}
+
+.fields {
+  display: flex;
+  flex-direction: column;
+}
+
+.switcher {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+.switcher > button:nth-child(1n+2) {
+  margin-left: 30px;
+}
+
+.fields > button {
+  height: 30px;
+  border-radius: 50px;
+  margin-top: 20px;
+  background-color: #e43c4b;
+  border: none;
+  color: white;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 300;
+}
+
+.switcher > button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding: 0 0 0 0;
+}
+
+.fields > input {
+  border-radius: 50px;
+  border: none;
+  height: 30px;
+  padding-left: 35px;
+  color: white;
+}
+
+#email {
+  background: url('../assets/ic-email.png') no-repeat 7px 7px;
+  background-size: 16px;
+  background-position: 10px;
+  background-color: #033d711c;
+}
+#password {
+  background: url('../assets/ic-password.png') no-repeat 7px 7px;;
+  background-size: 16px;
+  background-position: 10px;
+  background-color: #033d711c;
+}
+#username {
+  background: url('../assets/ic-username.png') no-repeat 7px 7px;;
+  background-size: 16px;
+  background-position: 10px;
+  background-color: #033d711c;
+}
+.fields > input:not(:last-child) {
+  margin-bottom: 15px;
+
+}
+
+button:focus, input:focus {
+    outline: none;
+}
+
+input::placeholder {
+  color: #ffffff78;
+}
+
+#one {
+  border-bottom: 2px solid currentColor;
+}
+#two {
+  border-bottom: 2px solid currentColor;
 }
