--- a/src/components/login.css
+++ b/src/components/login.css
@@ -27,7 +27,7 @@
   width: 200px;
 }
 
-.fields {
+.fields > form {
   display: flex;
   flex-direction: column;
 }
@@ -41,7 +41,7 @@
   margin-left: 30px;
 }
 
-.fields > button {
+.fields > form > button {
   height: 30px;
   border-radius: 50px;
   margin-top: 20px;
@@ -62,7 +62,7 @@
   padding: 0 0 0 0;
 }
 
-.fields > input {
+.fields > form > input {
   border-radius: 50px;
   border: none;
   height: 30px;
@@ -88,7 +88,7 @@
   background-position: 10px;
   background-color: #033d711c;
 }
-.fields > input:not(:last-child) {
+.fields > form > input:not(:last-child) {
   margin-bottom: 15px;
 
 }
@@ -101,9 +101,9 @@ input::placeholder {
   color: #ffffff78;
 }
 
-#one {
+#underline {
   border-bottom: 2px solid currentColor;
 }
-#two {
-  border-bottom: 2px solid currentColor;
+#dim {
+  opacity: 0.4;
 }
